Minor refactoring of assertion code https://bugs.webkit.org/show_bug.cgi?id=263092 rdar://116884036

Reviewed by Brent Fulgham.

This patch makes AuxiliaryProcessProxy inherit from ProcessThrottlerClient, so that every process proxy class
does not need to do that. Additionally, a new create method is added to ProcessAssertion, which takes a
AuxiliaryProcessProxy parameter, instead of a PID. This static method is intended to be used when you want to
take an assertion on the GPU, Networking, or WebContent process from the UI process. This patch is also
preparing for adopting new assertion SPI from ExtensionKit, but this is not enabled by default, so there
should be no behavior change from this patch.

* Source/WebKit/NetworkProcess/Downloads/DownloadMap.cpp:
(WebKit::DownloadMap::add):
* Source/WebKit/Platform/spi/Cocoa/ExtensionKitSPI.h:
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
* Source/WebKit/UIProcess/Cocoa/AuxiliaryProcessProxyCocoa.mm:
* Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
(WebKit::ProcessAssertion::ProcessAssertion):
(WebKit::ProcessAssertion::~ProcessAssertion):
* Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp:
(WebKit::DownloadProxyMap::createDownloadProxy):
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.h:
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::setWebProcessHasUploads):
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.h:
* Source/WebKit/UIProcess/ProcessAssertion.cpp:
(WebKit::ProcessAssertion::create):
* Source/WebKit/UIProcess/ProcessAssertion.h:
(WebKit::aquireAssertion):
(WebKit::ProcessAssertion::create): Deleted.
* Source/WebKit/UIProcess/ProcessThrottlerClient.h:
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/269791@main